--- a/index.html
+++ b/index.html
@@ -1,123 +1,12 @@
 <!DOCTYPE html>
-<html>
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>Namensfinder</title>
-
-    <style type="text/css">
-        body {
-            background: rgb(80, 80, 80);
-        }
-
-        .name {
-          transition: all 10s linear;
-            font-family: Calibri;
-            font-size: 75px;
-            font-weight: bold;
-            color: rgb(255, 255, 255);
-            flex-grow: 1;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            /* non- selectable */
-            -webkit-user-select: none;
-            /* Chrome all / Safari all */
-            -moz-user-select: none;
-            /* Firefox all */
-            -ms-user-select: none;
-            /* IE 10+ */
-            user-select: none;
-            /* Likely future */
-            /* non- selectable */
-        }
-
-        /*
-        .next-name-button:hover {
-            background-color: rgb(180, 100, 145);
-        }
-        */
-
-        .next-name-button:active {
-            background-color: rgb(180, 100, 145);
-        }
-
-        body,
-        html {
-            margin: 0;
-            padding: 0;
-        }
-
-
-
-        .center-vh {
-            height: 100vh;
-            text-align: center;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-        }
-
-        .next-name-button {
-            background-color: #ffff3f;
-            padding: 12px;
-            text-align: center;
-            width: 100%;
-            /* non- selectable */
-            -webkit-user-select: none;
-            /* Chrome all / Safari all */
-            -moz-user-select: none;
-            /* Firefox all */
-            -ms-user-select: none;
-            /* IE 10+ */
-            user-select: none;
-            /* Likely future */
-            /* non- selectable */
-            transition: all 1s;
-        }
-    </style>
-</head>
-
-<body>
-
-    <section class="center-vh">
-        <div class="name">Horst</div>
-
-        <div class="next-name-button">NÄCHSTE</div>
-    </section>
-
-
-    <!--
-  <h2>Weiterentwicklung Ideen</h2>
-
-  <ul>
-    <li>Trennung nach Geschlecht</li>
-    <li>Optimierung für Smartphones</li>
-    <li>„Hübsche” Anzeige: Name, Häufigkeit</li>
-    <li>Charts: Beliebteste Namen</li>
-    <li>Swipen</li>
-    <li>Gefällt mir / Gefällt mir nicht</li>
-    <li>Seltenste Namen</li>
-    <li>Regionale Unterschiede</li>
-    <li>namen filtern</li>
-  </ul>
--->
-
-    <script>
-        var nameList = ["Hubert", "Horst", "Paul", "Bernd", "Albrecht"];
-
-        document.querySelector('.next-name-button').addEventListener('click', function() {
-            var nameIndex = Math.round(Math.random() * 4);
-            var name = nameList[nameIndex];
-            document.querySelector('.name').innerHTML = name;
-
-
-
-
-        });
-    </script>
-</body>
-
+<html lang="de">
+    <head>
+        <meta charset="utf-8" />
+        <title></title>
+        <link rel="stylesheet" type="text/css" href="style.css">
+        <script src="script.js"></script>
+    </head>
+    <body>
+        
+    </body>
 </html>
