--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <body>
         <div class="name-search">
             <h1>Wie häufig ist dein Name?</h1>
-  
             <form class="search-name-form" autocomplete="off">
                 <input type="text" name="inputName" class="input-name" placeholder="Gib einen Namen ein">
                 <p>Suche nach Geschlecht:
@@ -22,9 +21,18 @@
                 </p>
                 <button type="submit" class="show-result">Ergebnis anzeigen</button>
             </form>
-
             <div class="result"></div>
-
+        </div>
+        <hr>
+        <div id="NamenZaehlen">
+            <h1>Zufallsauswahl</h1>
+            <p><input type="checkbox" id="CheckboxMaennlich" onclick="maennlichAusgewaehlt()"> Männlich</p>
+            <p><input type="checkbox" id="CheckboxWeiblich" onclick="WeiblichAusgewaehlt()"> Weiblich</p>
+            <p><input type="checkbox" id="CheckboxDatenbanken2015" checked="checked"> Datenbanken aus 2015 berücksichtigen</p>
+            <p><input type="checkbox" id="CheckboxDatenbanken2016" checked="checked"> Datenbanken aus 2016 berücksichtigen</p>
+            <p><input type="checkbox" id="CheckboxStatistik" checked="checked"> Statistik aus Datenbank berücksichtigen</p>
+            <p><input type="button" value="Zufälligen Namen ausgeben" onclick="Zufallsname()"></p>
+            <p id="Ausgabezeile" style="display: none;"></p>
         </div>
     </body>
 </html>
