add copyright info

--- a/index.html
+++ b/index.html
@@ -33,5 +33,6 @@
             <p><input type="button" value="Zufälligen Namen ausgeben" onclick="Zufallsname()"></p>
             <p id="Ausgabezeile" style="display: none;"></p>
         </div>
+        <footer style="margin-top:2rem;font-size:0.8rem;">Daten: CC BY 4.0 Stadt Heilbronn - www.heilbronn.de</footer>
     </body>
 </html>
