--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             </form>
             <div class="result"></div>
         </div>
+        <div style="clear: both;"></div>
         <div id="NamenZaehlen">
             <h1>Zufallsauswahl</h1>
             <p><input type="checkbox" id="CheckboxMaennlich" onclick="maennlichAusgewaehlt()"> Männlich</p>
